update docs, bin

--- a/bin/nginx/live.conf
+++ b/bin/nginx/live.conf
@@ -4,7 +4,7 @@
 
 server {
     listen 80;
-    server_name hindu-mandal.inte.clinicedc.org;
+    server_name ug.inte.clinicedc.org;
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location ~ /apple-touch-icon(|-\d+x\d+)(|-precomposed).png { access_log off; log_not_found off; }
