--- a/bin/nginx/uat.conf
+++ b/bin/nginx/uat.conf
@@ -5,7 +5,7 @@
 
 server {
     listen 80;
-    server_name hindu-mandal.uat.inte.clinicedc.org;
+    server_name ug.uat.inte.clinicedc.org;
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location ~ /apple-touch-icon(|-\d+x\d+)(|-precomposed).png { access_log off; log_not_found off; }
