add docs, bump requirements

--- a/.env-tests
+++ b/.env-tests
@@ -89,10 +89,10 @@ DJANGO_USE_TZ=True
 EDC_ADVERSE_EVENT_ADMIN_SITE=inte_ae_admin
 EDC_ADVERSE_EVENT_APP_LABEL=inte_ae
 EDC_NAVBAR_DEFAULT=inte_dashboard
-EDC_RANDOMIZATION_BLINDED_TRIAL=True
+EDC_RANDOMIZATION_BLINDED_TRIAL=False
 EDC_RANDOMIZATION_LIST_FILE=/Users/erikvw/source/inte-edc/inte_edc/tests/randomization_list.csv
 EDC_RANDOMIZATION_LIST_MODEL=edc_randomization.randomizationlist
-EDC_RANDOMIZATION_UNBLINDED_USERS=erikvw
+EDC_RANDOMIZATION_ASSIGNMENT_MAP=intervention=1,control=2
 MAILGUN_API_KEY=
 MAILGUN_API_URL=https://api.mailgun.net/v3/lists
 MYSQL_DATABASE=inte
