--- a/.env-tests
+++ b/.env-tests
@@ -20,6 +20,7 @@
 ##################################################################
 
 AWS_ACCESS_KEY_ID=
+AWS_DEFAULT_ACL=None
 AWS_ENABLED=False
 AWS_LOCATION=inte/static
 AWS_S3_CUSTOM_DOMAIN=cdn.clinicedc.org
@@ -41,7 +42,7 @@ DJANGO_COLLECT_OFFLINE_SERVER_IP=
 DJANGO_COUNTRY=tanzania
 DJANGO_CSRF_COOKIE_SECURE=False
 DJANGO_CUPS_SERVERS=localhost=None
-DJANGO_DASHBOARD_BASE_TEMPLATES=edc_base_template=edc_dashboard/base.html,listboard_base_template=inte_edc/base.html,dashboard_base_template=inte_edc/base.html,screening_listboard_template=inte_dashboard/screening/listboard.html,subject_listboard_template=inte_dashboard/subject/listboard.html,subject_dashboard_template=inte_dashboard/subject/dashboard.html,subject_review_listboard_template=edc_review_dashboard/subject_review_listboard.html,ae_listboard_template=inte_dashboard/ae/ae_listboard.html,death_report_listboard_template=inte_dashboard/ae/death_report_listboard.html
+DJANGO_DASHBOARD_BASE_TEMPLATES=edc_base_template=edc_dashboard/base.html,listboard_base_template=inte_edc/base.html,dashboard_base_template=inte_edc/base.html,screening_listboard_template=inte_dashboard/screening/listboard.html,subject_listboard_template=inte_dashboard/subject/listboard.html,subject_dashboard_template=inte_dashboard/subject/dashboard.html,subject_review_listboard_template=edc_review_dashboard/subject_review_listboard.html
 DJANGO_DASHBOARD_URL_NAMES=
 DJANGO_DEBUG=True
 DJANGO_EDC_BOOTSTRAP=3
@@ -62,7 +63,7 @@ DJANGO_KEY_FOLDER=
 DJANGO_LABEL_TEMPLATE_FOLDER=
 DJANGO_LAB_DASHBOARD_BASE_TEMPLATES=
 DJANGO_LAB_DASHBOARD_URL_NAMES=
-DJANGO_LANGUAGES=sw:Swahili,en:English
+DJANGO_LANGUAGES=lg:Luganda,ry:Runyakitara,en:English
 DJANGO_LANGUAGE_CODE=en-us
 DJANGO_LIVE_SYSTEM=False
 DJANGO_LOGGING_ENABLED=False
@@ -78,11 +79,10 @@ DJANGO_SESSION_COOKIE_SECURE=False
 DJANGO_SUBJECT_CONSENT_MODEL=inte_consent.subjectconsent
 DJANGO_SUBJECT_REQUISITION_MODEL=inte_subject.subjectrequisition
 DJANGO_SUBJECT_VISIT_MODEL=inte_subject.subjectvisit
-# DJANGO_SITE_ID=
 DJANGO_STATIC_ROOT=/home/inte/static/
 DJANGO_STATIC_URL=/static/
-DJANGO_TIME_ZONE=Africa/Dar_es_Salaam
-DJANGO_TOWN=hindu_mandal
+DJANGO_TIME_ZONE=Africa/Kampala
+DJANGO_TOWN=kinoni
 DJANGO_USE_I18N=True
 DJANGO_USE_L10N=False
 DJANGO_USE_TZ=True
@@ -90,7 +90,7 @@ EDC_ADVERSE_EVENT_ADMIN_SITE=inte_ae_admin
 EDC_ADVERSE_EVENT_APP_LABEL=inte_ae
 EDC_NAVBAR_DEFAULT=inte_dashboard
 EDC_RANDOMIZATION_BLINDED_TRIAL=False
-EDC_RANDOMIZATION_LIST_FILE=/Users/erikvw/source/inte-edc/inte_edc/tests/randomization_list.csv
+EDC_RANDOMIZATION_LIST_FILE=/Users/erikvw/source/inte-edc/.etc/inte/randomization_list.csv
 EDC_RANDOMIZATION_LIST_MODEL=edc_randomization.randomizationlist
 EDC_RANDOMIZATION_ASSIGNMENT_MAP=intervention=1,control=2
 MAILGUN_API_KEY=
@@ -99,15 +99,11 @@ MYSQL_DATABASE=inte
 MYSQL_ROOT_PASSWORD=
 MYSQL_USER=edc
 MYSQL_USER_PASSWORD=my_password
-SAUCE_ACCESS_KEY=
-SAUCE_ENABLED=True
-SAUCE_USERNAME=erikvw
 SENTRY_DSN=
 SENTRY_ENABLED=False
 SIMPLE_HISTORY_REVERT_DISABLED=True
 SIMPLE_HISTORY_PERMISSIONS_ENABLED=True
-TWILIO_ENABLED=False
 TWILIO_AUTH_TOKEN=
 TWILIO_ACCOUNT_SID=
-TWILIO_ENABLED=True
+TWILIO_ENABLED=False
 TWILIO_SENDER=
