--- a/tox.ini
+++ b/tox.ini
@@ -14,11 +14,12 @@ passenv = TOXENV CI TRAVIS TRAVIS_* CODECOV_*
 setenv =
     PYTHONWARNINGS=module::DeprecationWarning
 commands =
-    flake8 inte_*
+    flake8 inte_edc
+    pip install -U git+https://github.com/erikvw/django-simple-history@admin_revert_permissions
     coverage run runtests.py {posargs}
     codecov -e TOXENV
 deps =
-    -rrequirements/stable.txt
+    -rrequirements.txt
     -rrequirements.tests.txt
     edc-test-utils
     coverage
@@ -29,6 +30,5 @@ deps =
 
 [travis]
 python =
-    3.7: py37-django21
     3.7: py37-django22
     3.7: py37-djangotrunk
