--- a/.env-tests
+++ b/.env-tests
@@ -90,6 +90,13 @@ DJANGO_USE_TZ=True
 EDC_ADVERSE_EVENT_ADMIN_SITE=inte_ae_admin
 EDC_ADVERSE_EVENT_APP_LABEL=inte_ae
 EDC_NAVBAR_DEFAULT=inte_dashboard
+EDC_PROTOCOL=LSTM103
+EDC_PROTOCOL_INSTITUTION_NAME=Liverpool School of Tropical Medicine
+EDC_PROTOCOL_NUMBER=103
+EDC_PROTOCOL_PROJECT_NAME=INTE
+EDC_PROTOCOL_STUDY_OPEN_DATETIME=2019,6,30,0,0,0,UTC
+EDC_PROTOCOL_STUDY_CLOSE_DATETIME=2023,12,31,23,59,59,UTC
+EDC_PROTOCOL_TITLE=Integrating HIV, Diabetes and Hypertension Services in Africa: A Cluster - Randomised Trial in Tanzania and Uganda
 EDC_RANDOMIZATION_UNBLINDED_USERS=
 EDC_RANDOMIZATION_LIST_PATH=/Users/erikvw/source/inte-edc/inte_edc/tests/etc/
 EDC_RANDOMIZATION_REGISTER_DEFAULT_RANDOMIZER=False
