requirements, migrations, env

--- a/.env-tests
+++ b/.env-tests
@@ -79,6 +79,7 @@ DJANGO_SECURE_PROXY_SSL_HEADER=None
 DJANGO_SESSION_COOKIE_SECURE=False
 DJANGO_SUBJECT_CONSENT_MODEL=inte_consent.subjectconsent
 DJANGO_SUBJECT_REQUISITION_MODEL=inte_subject.subjectrequisition
+DJANGO_SUBJECT_SCREENING_MODEL=inte_screening.subjectscreening
 DJANGO_SUBJECT_VISIT_MODEL=inte_subject.subjectvisit
 DJANGO_STATIC_ROOT=/home/inte/static/
 DJANGO_STATIC_URL=/static/
