--- a/env.sample
+++ b/env.sample
@@ -70,6 +70,7 @@ DJANGO_STATIC_ROOT=/Users/erikvw/source/inte-edc/static/
 DJANGO_STATIC_URL=/static/
 DJANGO_SUBJECT_CONSENT_MODEL=inte_consent.subjectconsent
 DJANGO_SUBJECT_REQUISITION_MODEL=inte_subject.subjectrequisition
+DJANGO_SUBJECT_SCREENING_MODEL=inte_screening.subjectscreening
 DJANGO_SUBJECT_VISIT_MODEL=inte_subject.subjectvisit
 DJANGO_TIME_ZONE=Africa/Nairobi
 DJANGO_TOWN=kinoni
