--- a/bin/templates/index_country.template
+++ b/bin/templates/index_country.template
@@ -17,32 +17,18 @@
   <p>Select a site to continue</p> 
 </div>
 
-
-
 <div class="container">
-
 <div class="row">
   <div class="col-sm-2"></div>
-  <div class="col-sm-4">
+  <div class="col-sm-8">
     <div class="panel panel-success">
       <div class="panel-heading">INTE Africa Sites</div>
       <div class="list-group">
-        <a href="https://ug.inte.clinicedc.org/" class="list-group-item">Uganda</a>
-        <a href="https://tz.inte.clinicedc.org/" class="list-group-item">Tanzania</a>
+         {sites_anchors}
       </div>
-      </div></div>
-
-  <div class="col-sm-4">
-    <div class="panel panel-danger">
-      <div class="panel-heading">INTE Africa Test Sites</div>
-      <div class="list-group">
-        <a href="https://ug.uat.inte.clinicedc.org/" class="list-group-item">Uganda (UAT)</a>
-        <a href="https://tz.uat.inte.clinicedc.org/" class="list-group-item">Tanzania (UAT)</a>
-      </div>
-      </div></div>
-
+    </div>
+  </div>
   <div class="col-sm-2"></div>
-
 </div>
 </body>
 </html>
