--- a/bin/templates/nginx.template
+++ b/bin/templates/nginx.template
@@ -1,19 +1,18 @@
-# change the server_name and host redirect in both blocks as required
-# search replace "gaborone" with your town
-# then let certbot configure for https
+# let certbot configure for https
+# see https://certbot.eff.org
 
 server {
     listen 80;
-    server_name ug.inte.clinicedc.org;
+    server_name $server_name;
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location ~ /apple-touch-icon(|-\d+x\d+)(|-precomposed).png { access_log off; log_not_found off; }
-    
+
     location / {
         include proxy_params;
-        proxy_pass http://unix:/run/gunicorn.sock;
+        proxy_pass $proxy_pass;
     }
-    
+
     # not needed if using AWS
     # location /static/ {
     #    autoindex on;
