--- a/bin/templates/gunicorn.service.template
+++ b/bin/templates/gunicorn.service.template
@@ -8,6 +8,7 @@ After=network.target
 [Service]
 User=edc
 Group=www-data
+Environment="DJANGO_SETTING_MODULE=inte_edc.settings.{country}.{site}"
 WorkingDirectory=/home/edc/app
 ExecStart=/home/edc/miniconda3/envs/edc/bin/gunicorn \
     --access-logfile - \
