--- a/bin/systemd/gunicorn.service.template
+++ b/bin/systemd/gunicorn.service.template
@@ -8,14 +8,13 @@ After=network.target
 [Service]
 User=edc
 Group=www-data
-Environment="DJANGO_SETTINGS_MODULE=inte_edc.settings.{country}.{site}"
 WorkingDirectory=/home/edc/app
 ExecStart=/home/edc/miniconda3/envs/edc/bin/gunicorn \
     --access-logfile - \
     --workers 3 \
     --timeout=300 \
     --bind unix:/run/gunicorn-{site}.sock \
-    inte_edc.wsgi:application
+    inte_edc.wsgi.{site}:application
 
 [Install]
 WantedBy=multi-user.target
