--- a/bin/www/uat.inte.clinicedc.org/country_index.html.template
+++ b/bin/www/uat.inte.clinicedc.org/country_index.html.template
@@ -21,7 +21,7 @@
 <div class="row">
   <div class="col-sm-2"></div>
   <div class="col-sm-8">
-    <div class="panel panel-success">
+    <div class="panel panel-{panel_color}">
       <div class="panel-heading">INTE Africa Sites</div>
       <div class="list-group">
          {sites_anchors}
