--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-edc==0.1.12
+edc==0.1.13
 git+https://github.com/erikvw/django-simple-history@admin_revert_permissions2
+git+https://github.com/erikvw/django-multisite@master
 beautifulsoup4
