--- a/bin/nginx/conf/inte_uat.conf
+++ b/bin/nginx/conf/inte_uat.conf
@@ -3,14 +3,14 @@
 
 server {
     listen 80;
-    server_name $server_name;
+    server_name *.uat.inte.clinicedc.org;
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location ~ /apple-touch-icon(|-\d+x\d+)(|-precomposed).png { access_log off; log_not_found off; }
 
     location / {
         include proxy_params;
-        proxy_pass $proxy_pass;
+        proxy_pass gunicorn-uat.sock;
     }
 
     # not needed if using AWS
