--- a/bin/nginx/conf/inte_live.conf
+++ b/bin/nginx/conf/inte_live.conf
@@ -10,7 +10,7 @@ server {
 
     location / {
         include proxy_params;
-        proxy_pass gunicorn-live.sock;
+        proxy_pass http://unix:/run/gunicorn-live.sock;
     }
 
     # not needed if using AWS
