--- a/bin/nginx/conf/inte_live.conf
+++ b/bin/nginx/conf/inte_live.conf
@@ -3,7 +3,7 @@
 
 server {
     listen 80;
-    server_name *.live.inte.clinicedc.org;
+    server_name bugamba.ug.inte.clinicedc.org bukulula.ug.inte.clinicedc.org buwambo.ug.inte.clinicedc.org bwizibwera.ug.inte.clinicedc.org kajjansi.ug.inte.clinicedc.org kasangati.ug.inte.clinicedc.org kasanje.ug.inte.clinicedc.org kinoni.ug.inte.clinicedc.org kojja.ug.inte.clinicedc.org kyamulibwa.ug.inte.clinicedc.org kyazanga.ug.inte.clinicedc.org mpigi.ug.inte.clinicedc.org muduma.ug.inte.clinicedc.org namayumba.ug.inte.clinicedc.org namulonge.ug.inte.clinicedc.org ruhoko.ug.inte.clinicedc.org sekiwunga.ug.inte.clinicedc.org tikalu.ug.inte.clinicedc.org;
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location ~ /apple-touch-icon(|-\d+x\d+)(|-precomposed).png { access_log off; log_not_found off; }
