--- a/bin/nginx/conf/inte_uat_sites.conf
+++ b/bin/nginx/conf/inte_uat_sites.conf
@@ -2,21 +2,17 @@
 # see https://certbot.eff.org
 
 server {
-    listen 80;
+
+    root /var/www/html/uat.inte.clinicedc.org;
+    index index.html index.htm;
+
     server_name uat.inte.clinicedc.org;
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location ~ /apple-touch-icon(|-\d+x\d+)(|-precomposed).png { access_log off; log_not_found off; }
 
     location / {
-        include proxy_params;
-        proxy_pass http://unix:/run/gunicorn-uat.sock;
+        try_files $uri $uri/ =404;
     }
-
-    # not needed if using AWS
-    # location /static/ {
-    #    autoindex on;
-    #    root /home/live/static/;
-    #}
 
 }
