--- a/env.sample
+++ b/env.sample
@@ -19,6 +19,13 @@ AWS_SECRET_ACCESS_KEY=
 AWS_STORAGE_BUCKET_NAME=
 CDN_ENABLED=False
 CDN_ZONE_URL=
+CELERY_BROKER_USER=celery
+CELERY_BROKER_PASSWORD=
+CELERY_BROKER_HOST=
+CELERY_BROKER_PORT=
+CELERY_ENABLED=False
+DATA_MANAGER_ENABLED=False
+DATA_MANAGER_SHOW_ON_DASHBOARD=True
 DATABASE_URL=mysql://<user>:<password>@127.0.0.1:3306/inte_production
 DATABASE_SQLITE_ENABLED=False
 DJANGO_ALLOWED_HOSTS=localhost
@@ -29,38 +36,37 @@ DJANGO_COLLECT_OFFLINE_FILES_REMOTE_HOST=
 DJANGO_COLLECT_OFFLINE_FILES_USB_VOLUME=
 DJANGO_COLLECT_OFFLINE_FILES_USER=
 DJANGO_COLLECT_OFFLINE_SERVER_IP=
-DJANGO_COUNTRY=uganda
 DJANGO_CSRF_COOKIE_SECURE=False
 DJANGO_CUPS_SERVERS=localhost=None
 DJANGO_DASHBOARD_BASE_TEMPLATES=edc_base_template=edc_dashboard/base.html,listboard_base_template=inte_edc/base.html,dashboard_base_template=inte_edc/base.html,screening_listboard_template=inte_dashboard/screening/listboard.html,subject_listboard_template=inte_dashboard/subject/listboard.html,subject_dashboard_template=inte_dashboard/subject/dashboard.html,subject_review_listboard_template=edc_review_dashboard/subject_review_listboard.html
 DJANGO_DASHBOARD_URL_NAMES=
 DJANGO_DEBUG=True
 DJANGO_EDC_BOOTSTRAP=3
-DJANGO_EMAIL_CONTACTS=ae_reports=intereporting@lshtm.ac.uk,data_request=test-data-request@mg.clinicedc.org,data_manager=data-manager@mg.clinicedc.org
+DJANGO_EMAIL_CONTACTS=ae_reports=ae_reports@example.com,data_request=test-data-request@example.com,data_manager=data-manager@example.com
 DJANGO_EMAIL_ENABLED=False
 DJANGO_EMAIL_HOST=smtp.mailgun.org
 DJANGO_EMAIL_HOST_PASSWORD=
 DJANGO_EMAIL_HOST_USER=postmaster@mg.clinicedc.org
 DJANGO_EMAIL_PORT=587
 DJANGO_EMAIL_USE_TLS=True
-DJANGO_ETC_FOLDER=/Users/erikvw/source/inte-edc/.etc/inte
-DJANGO_EXPORT_FOLDER=/Users/erikvw/source/inte-edc/export
+DJANGO_ETC_FOLDER=/Users/erikvw/tmp/inte-edc/.etc/inte
+DJANGO_EXPORT_FOLDER=/Users/erikvw/tmp/inte-edc/export
 DJANGO_FQDN=clinicedc.org
 DJANGO_HOLIDAY_FILE=holidays.csv
 DJANGO_INDEX_PAGE=https://inte.clinicedc.org
 DJANGO_INDEX_PAGE_LABEL=Change site
-DJANGO_KEY_FOLDER=/Users/erikvw/source/inte-edc/.etc/inte/crypto_fields
+DJANGO_KEY_FOLDER=/Users/erikvw/tmp/inte-edc/.etc/inte/crypto_fields
 DJANGO_LABEL_TEMPLATE_FOLDER=
 DJANGO_LAB_DASHBOARD_BASE_TEMPLATES=
 DJANGO_LAB_DASHBOARD_URL_NAMES=
-DJANGO_LANGUAGES=lg:Luganda,ry:Runyakitara,en:English
+DJANGO_LANGUAGES=lg:Luganda,ry:Runyakitara,en:English,sw:Swahili
 DJANGO_LANGUAGE_CODE=en-us
 DJANGO_LIVE_SYSTEM=True
 DJANGO_LOGGING_ENABLED=True
 DJANGO_LOGGING_FILE_LEVEL=INFO
 DJANGO_LOGGING_SYSLOG_LEVEL=INFO
 DJANGO_LOGIN_REDIRECT_URL=home_url
-DJANGO_LOG_FOLDER=/Users/erikvw/source/inte-edc/log
+DJANGO_LOG_FOLDER=/Users/erikvw/tmp/inte-edc/log
 DJANGO_REDIS_PASSWORD=
 DJANGO_REVIEWER_SITE_ID=1
 DJANGO_SECRET_KEY=0987yhgen3mjk4irto9
@@ -72,8 +78,7 @@ DJANGO_SUBJECT_CONSENT_MODEL=inte_consent.subjectconsent
 DJANGO_SUBJECT_REQUISITION_MODEL=inte_subject.subjectrequisition
 DJANGO_SUBJECT_SCREENING_MODEL=inte_screening.subjectscreening
 DJANGO_SUBJECT_VISIT_MODEL=inte_subject.subjectvisit
-DJANGO_TIME_ZONE=Africa/Nairobi
-DJANGO_TOWN=kinoni
+DJANGO_TIME_ZONE=Africa/Kampala
 DJANGO_USE_I18N=True
 DJANGO_USE_L10N=False
 DJANGO_USE_TZ=True
@@ -86,16 +91,18 @@ EDC_PROTOCOL=LSTM103
 EDC_PROTOCOL_INSTITUTION_NAME=Liverpool School of Tropical Medicine
 EDC_PROTOCOL_NUMBER=103
 EDC_PROTOCOL_PROJECT_NAME=INTE
-EDC_PROTOCOL_STUDY_OPEN_DATETIME=2019,12,31,0,0,0,UTC
+EDC_PROTOCOL_STUDY_OPEN_DATETIME=2019,6,30,0,0,0,UTC
 EDC_PROTOCOL_STUDY_CLOSE_DATETIME=2023,12,31,23,59,59,UTC
 EDC_PROTOCOL_TITLE=Integrating HIV, Diabetes and Hypertension Services in Africa: A Cluster - Randomised Trial in Tanzania and Uganda
 EDC_RANDOMIZATION_BLINDED_TRIAL=False
 EDC_RANDOMIZATION_UNBLINDED_USERS=
-EDC_RANDOMIZATION_LIST_PATH=/Users/erikvw/source/inte-edc/.etc/inte/
+EDC_RANDOMIZATION_LIST_PATH=/Users/erikvw/tmp/inte-edc/.etc/inte/
 EDC_RANDOMIZATION_REGISTER_DEFAULT_RANDOMIZER=False
+EDC_SITES_MODULE_NAME=inte_sites.sites
+EDC_SITES_UAT_DOMAIN=True
 MAILGUN_API_KEY=
 MAILGUN_API_URL=https://api.mailgun.net/v3/lists
-MYSQL_DATABASE=inte_production
+MYSQL_DATABASE=inte_tmp
 MYSQL_ROOT_PASSWORD=
 MYSQL_USER=
 MYSQL_USER_PASSWORD=
