--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist =
     py37-django22,
     py{37,38}-django30,
-    py{37,38}-djangotrunk
+    # py{37,38}-djangotrunk
 
 [testenv:docs]
 changedir = docs
@@ -34,7 +34,7 @@ deps =
 python =
     3.7: py37-django22
     3.7: py37-django30
-    3.7: py37-djangotrunk
+    # 3.7: py37-djangotrunk
     3.8: py38-django22
     3.8: py38-django30
-    3.8: py38-djangotrunk
+    # 3.8: py38-djangotrunk
