--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
 envlist =
-    py{37,38,39}-dj{30,31,dev}-{mysql},
+    py{38,39}-dj{31,32,dev}-{mysql},
     lint
 
 [gh-actions]
 python =
-    3.7: py37
     3.8: py38, lint
     3.9: py39
 
@@ -33,6 +32,7 @@ deps =
 
 commands =
     pip install -U pip
+    pip install -U git+https://github.com/respond-africa/respond-africa@develop
     pip install -U git+https://github.com/clinicedc/edc-test-utils@develop
     pip install -U git+https://github.com/erikvw/django-import-export@get_export_admin_action
     mysql: coverage run -a runtests.py --database=mysql
