--- a/.env-tests
+++ b/.env-tests
@@ -102,6 +102,7 @@ EDC_PROTOCOL_TITLE=Integrating HIV, Diabetes and Hypertension Services in Africa
 EDC_RANDOMIZATION_UNBLINDED_USERS=
 EDC_RANDOMIZATION_LIST_PATH=/Users/erikvw/source/inte-edc/inte_edc/tests/etc/
 EDC_RANDOMIZATION_REGISTER_DEFAULT_RANDOMIZER=False
+RESPOND_DIAGNOSIS_LABELS=hiv=HIV,htn=Hypertension,dm=Diabetes
 MAILGUN_API_KEY=
 MAILGUN_API_URL=https://api.mailgun.net/v3/lists
 MYSQL_DATABASE=inte
