--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-edc==0.3.7
+edc==0.3.14
+respond-africa==0.1.8
 git+https://github.com/erikvw/django-import-export@get_export_admin_action
 beautifulsoup4
