--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
-    py{38,39}-dj{31,32,dev}-{mysql},
+    py{38,39}-{mysql}-edc{supported},
+    py{38,39}-dj{31,32,dev}-{mysql}-edc{dev},
     lint
 
 [gh-actions]
@@ -23,7 +24,9 @@ exclude = __init__.py,inte_edc/migrations/*,inte_edc/tests/*
 [testenv]
 deps =
     -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/tox.txt
-    -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/edc.txt
+    edcsupported: -r requirements.txt
+    edcdev: -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/edc.txt
+    edcdev: https://github.com/respond-africa/respond-africa/tarball/develop
     dj31: Django>=3.1,<3.2
     dj32: Django>=3.2,<3.3
     djdev: https://github.com/django/django/tarball/main
@@ -31,7 +34,6 @@ deps =
 
 commands =
     pip install -U pip
-    pip install -U git+https://github.com/respond-africa/respond-africa@develop
     pip install -U git+https://github.com/clinicedc/edc-test-utils@develop
     pip install -U git+https://github.com/erikvw/django-import-export@get_export_admin_action
     mysql: coverage run -a runtests.py --database=mysql
