Add django version to edcsupported tox environment to play nicely with Github Actions

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{38,39}-{mysql}-edc{supported},
+    py{38,39}-dj{31}-{mysql}-edc{supported},
     py{38,39}-dj{31,32,dev}-{mysql}-edc{dev},
     lint
 
