fetch setting.INTE_SCREENING_DCL_REVISION_DATETIME from env

--- a/.env-tests
+++ b/.env-tests
@@ -95,6 +95,7 @@ EDC_SUBJECT_SCREENING_MODEL=inte_screening.subjectscreening
 EDC_SUBJECT_VISIT_MODEL=inte_subject.subjectvisit
 EDC_SUBJECT_VISIT_MISSED_MODEL=inte_subject.subjectvisitmissed
 EDC_SUBJECT_VISIT_MISSED_REASONS_MODEL=inte_subject.subjectvisitmissedreasons
+INTE_SCREENING_DCL_REVISION_DATETIME=2021,5,23,0,0,0,UTC
 RESPOND_DIAGNOSIS_LABELS=hiv=HIV,htn=Hypertension,dm=Diabetes
 MAILGUN_API_KEY=
 MAILGUN_API_URL=
