--- a/env.sample
+++ b/env.sample
@@ -100,6 +100,7 @@ EDC_RANDOMIZATION_LIST_PATH=/Users/erikvw/tmp/inte-edc/.etc/inte/
 EDC_RANDOMIZATION_REGISTER_DEFAULT_RANDOMIZER=False
 EDC_SITES_MODULE_NAME=inte_sites.sites
 EDC_SITES_UAT_DOMAIN=True
+INTE_SCREENING_DCL_REVISION_DATETIME=2021,5,23,0,0,0,UTC
 RESPOND_DIAGNOSIS_LABELS=hiv=HIV,htn=Hypertension,dm=Diabetes
 MAILGUN_API_KEY=
 MAILGUN_API_URL=https://api.mailgun.net/v3/lists
