--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ DJANGO =
 ignore = E226,E302,E41,F401,W503,W605
 max-complexity = 10
 max-line-length = 95
-exclude = __init__.py,inte_edc/migrations/*,inte_edc/tests/*
+exclude = __init__.py,inte_*/migrations/*,inte_*/tests/*
 
 [testenv]
 deps =
