--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,7 @@ commands =
     pip install -U pip
     pip install -U git+https://github.com/clinicedc/edc-test-utils@develop
     pip install -U git+https://github.com/erikvw/django-import-export@get_export_admin_action
+    pip install -U git+https://github.com/yprez/django-logentry-admin@master
     mysql: coverage run -a runtests.py --database=mysql
     coverage report
 
