--- a/tox.ini
+++ b/tox.ini
@@ -32,10 +32,10 @@ deps =
 
 commands =
     pip install -U pip
-    pip install -U git+https://github.com/clinicedc/edc-test-utils@develop
-    pip install -U git+https://github.com/erikvw/django-import-export@get_export_admin_action
-    pip install -U git+https://github.com/yprez/django-logentry-admin@master
-    pip install -U git+https://github.com/jazzband/django-defender@master
+    pip install git+https://github.com/clinicedc/edc-test-utils@develop
+    pip install git+https://github.com/erikvw/django-import-export@get_export_admin_action
+    pip install git+https://github.com/yprez/django-logentry-admin@master
+    pip install git+https://github.com/jazzband/django-defender@master
     mysql: coverage run -a runtests.py --database=mysql
     coverage report
 
