--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,7 @@ deps =
 
 commands =
     pip install -U pip
+    pip freeze
     pip install git+https://github.com/clinicedc/edc-test-utils@develop
     pip install git+https://github.com/erikvw/django-import-export@get_export_admin_action
     pip install git+https://github.com/yprez/django-logentry-admin@master
