remove tox commands, refer to txt files from edc

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ exclude = __init__.py,inte_*/migrations/*,inte_*/tests/*
 [testenv]
 deps =
     -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/tox.txt
+    -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/test_utils.txt
     edcsupported: -r requirements.txt
     edcdev: -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/edc.txt
     edcdev: https://github.com/respond-africa/respond-africa/tarball/develop
@@ -31,11 +32,7 @@ deps =
     mysql: -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/mysql.txt
 
 commands =
-    pip install -U pip
-    pip install git+https://github.com/clinicedc/edc-test-utils@develop
-    pip install git+https://github.com/erikvw/django-import-export@get_export_admin_action
-    pip install git+https://github.com/yprez/django-logentry-admin@master
-    pip install git+https://github.com/jazzband/django-defender@master
+    pip --version
     pip freeze
     mysql: coverage run -a runtests.py --database=mysql
     coverage report
