--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ DJANGO =
 ignore = E226,E302,E41,F401,W503,W605
 max-complexity = 10
 max-line-length = 95
-exclude = __init__.py,inte_*/migrations/*,inte_*/tests/*
+exclude = __init__.py,inte_*/migrations/*,.tox/*
 
 [testenv]
 deps =
@@ -40,6 +40,6 @@ commands =
 [testenv:lint]
 deps = -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/lint.txt
 commands =
-    isort --profile=black --check --diff inte_edc runtests.py setup.py --skip inte_edc/migrations/
-    black --check --diff inte_edc runtests.py setup.py
-    flake8 inte_edc
+    isort --profile=black --check --diff . --skip 'migrations' --skip '.tox'
+    black --check --diff . --exclude '/migrations/'
+    flake8 .
