Squashed commit of the following:
commit 5583bdefee99475264453add1b1524cfebcb56b3
Author: Jonathan Willitts <JonathanWillitts@users.noreply.github.com>
Date:   Tue Jun 15 14:57:13 2021 +0100

    Update build order

commit 60bb5822ba1828ecf97e9461fcfed0e79a7a8350
Author: Jonathan Willitts <JonathanWillitts@users.noreply.github.com>
Date:   Tue Jun 15 14:26:34 2021 +0100

    Exclude 'Supported' codebase running with 'dev' django

commit 2410bd00552a86de1989b6b55352f9f549d78b68
Author: Jonathan Willitts <JonathanWillitts@users.noreply.github.com>
Date:   Tue Jun 15 14:16:23 2021 +0100

    Reorder and rename jobs

commit 677678ef8b86a68bde318b37ea04a28bebee509b
Author: Jonathan Willitts <JonathanWillitts@users.noreply.github.com>
Date:   Tue Jun 15 14:13:01 2021 +0100

    Test splitting edcsupported and edcdev gh jobs

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,9 @@ python =
 DJANGO =
     3.2: dj32, lint
     dev: djdev
+EDC_CODEBASE =
+    Supported: edcsupported, lint
+    Dev: edcdev
 
 [flake8]
 ignore = E226,E302,E41,F401,W503,W605
