Exclude Python 3.8 running against the edcdevelop codebase (in GH actions)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,8 @@ jobs:
         exclude:
           - codebase: 'Supported'
             django-version: 'dev'
+          - codebase: 'Develop'
+            python-version: '3.8'
 
     services:
       mysql:
