--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 edc==0.3.27
 respond-africa==0.1.12
 beautifulsoup4
+canned_views==0.1.2
 git+https://github.com/ecometrica/django-multisite.git@master#egg=django-multisite
 git+https://github.com/erikvw/django-import-export.git@get_export_admin_action
 git+https://github.com/yprez/django-logentry-admin.git@master
