--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ install_requires =
     edc==0.3.27
     respond-africa==0.1.12
     beautifulsoup4
-    canned_views==0.1.2
+    canned_views
 
 [options.packages.find]
 exclude =
