Fix homepage url

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = inte-edc
 version = attr: _version
 author = Erik van Widenfelt
 author_email = ew2789@gmail.com
-url = https://github.com/clinicedc/inte-edc
+url = https://github.com/inte-africa-trial/inte-edc
 license = GPL license, see LICENSE
 description = "INTE-AFRICA Trial EDC (https://www.isrctn.com/ISRCTN43896688)"
 long_description = file: README.rst
